@@ -1,205 +1,84 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.dice-research</groupId>
-  <artifactId>sask</artifactId>
-  <version>0.0.7</version>
-  <packaging>pom</packaging>
-<parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.8.RELEASE</version>
-  </parent>
- <modules>
-    <module>eureka-server</module>
-    <module>discoveryclient</module>
-    <module>webclient</module>
-    <module>chatbot</module>
-  </modules>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
-    <compiler.version>1.8</compiler.version>
-    <spring.test.version>1.5.8.RELEASE</spring.test.version>
-    <spring.cloud.version>1.3.0.RELEASE</spring.cloud.version>
-    <spring.boot.version>1.5.8.RELEASE</spring.boot.version>
-  </properties>
+	<groupId>org.dice-research</groupId>
+	<artifactId>sask</artifactId>
+	<version>0.0.7</version>
+	<packaging>pom</packaging>
 
-  <dependencies>
-    <!-- ~~~~~~~ spring test ~~~~~~~ -->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <version>${spring.test.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- ~~~~~~~ spring cloud ~~~~~~~ -->
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter</artifactId>
-      <version>${spring.cloud.version}</version>
-    </dependency>
-    <!-- ~~~~~~~ spring eureka server ~~~~~~~ -->
-      <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-eureka-server</artifactId>
-      </dependency>
-    <!-- ~~~~~~~ spring boot ~~~~~~~ -->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-      <version>${spring.boot.version}</version>
-    </dependency>
-     <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>3.8.1</version>
-         <scope>test</scope>
-      </dependency>
-      <!-- ~~~~~~~ spring eureka server ~~~~~~~ -->
-      <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-eureka</artifactId>
-      </dependency>
-      
-      <!-- ~~~~~~~ spring cloud-ribbon ~~~~~~~ -->
-      <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-ribbon</artifactId>
-      </dependency>
-      <!-- ~~~~~~~ spring boot-actuator ~~~~~~~ -->
-      <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-actuator</artifactId>
-      </dependency>
-  </dependencies>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.5.8.RELEASE</version>
+	</parent>
 
-  <build>
-    <!--pluginManagement>
-      < plugins>
-      
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>
-                      org.apache.maven.plugins
-                    </groupId>
-                    <artifactId>
-                      maven-antrun-plugin
-                    </artifactId>
-                    <versionRange>[1.7,)</versionRange>
-                    <goals>
-                      <goal>run</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore />
-                  </action>
-                </pluginExecution>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>build-helper-maven-plugin</artifactId>
-                    <versionRange>[1.7,)</versionRange>
-                    <goals>
-                      <goal>add-source</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore />
-                  </action>
-                </pluginExecution>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>
-                      org.apache.maven.plugins
-                    </groupId>
-                    <artifactId>
-                      maven-dependency-plugin
-                    </artifactId>
-                    <versionRange>[2.1,)</versionRange>
-                    <goals>
-                      <goal>copy-dependencies</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore />
-                  </action>
-                </pluginExecution>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>
-                      net.revelc.code
-                    </groupId>
-                    <artifactId>
-                      formatter-maven-plugin
-                    </artifactId>
-                    <versionRange>
-                      [0.5.2,)
-                    </versionRange>
-                    <goals>
-                      <goal>format</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <ignore></ignore>
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement-->
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-        <!-- ~~~~~~~ support java 9 ~~~~~~~ -->
-        
-      </plugin>
-      <!--plugin>
-        <groupId>net.revelc.code</groupId>
-        <artifactId>formatter-maven-plugin</artifactId>
-        <configuration>
-          <configFile>${project.parent.basedir}/eclipse.xml</configFile>
-          <overrideConfigCompilerVersion>true</overrideConfigCompilerVersion>
-          <compilerSource>${compiler.version}</compilerSource>
-          <compilerCompliance>${compiler.version}</compilerCompliance>
-          <compilerTargetPlatform>${compiler.version}</compilerTargetPlatform>
-          <encoding>${project.build.sourceEncoding}</encoding>
-          <lineEnding>CRLF</lineEnding>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>compile</phase>
-            <goals>
-              <goal>format</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin-->
-    </plugins>
-  </build>
+	<modules>
+		<module>eureka-server</module>
+		<module>discoveryclient</module>
+		<module>webclient</module>
+		<module>fred-ms</module>
+		<module>chatbot</module>
+	</modules>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>Camden.SR5</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+	<properties>
+		<!-- ~~~~~~~ general ~~~~~~~ -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
 
+		<!-- ~~~~~~~ spring ~~~~~~~ -->
+		<spring.test.version>1.5.8.RELEASE</spring.test.version>
+		<spring.cloud.version>1.3.0.RELEASE</spring.cloud.version>
+		<spring.boot.version>1.5.8.RELEASE</spring.boot.version>
+	</properties>
+
+	<dependencies>
+		<!-- ~~~~~~~ spring test ~~~~~~~ -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring.test.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- ~~~~~~~ spring cloud ~~~~~~~ -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter</artifactId>
+			<version>${spring.cloud.version}</version>
+		</dependency>
+		<!-- ~~~~~~~ spring boot ~~~~~~~ -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<!-- ~~~~~~~ spring boot ~~~~~~~ -->
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<!-- ~~~~~~~ support java 9 ~~~~~~~ -->
+					<!-- https://blog.frankel.ch/migrating-to-java-9/1/ -->
+					<jvmArguments>--add-modules java.xml.bind</jvmArguments>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Camden.SR5</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
